# Prime-field-arithmetic

./: .gitignore  CMakeLists.txt  Makefile  README.md  REFACTORING_CHECKLIST.md  test_compile.cpp
.github/workflows/: ci.yml
benchmarks/: bench.cpp
example/basic_usage/: CMakeLists.txt  example_arithmetic.cpp
include/: field_element.hpp  field_element.tpp  helpers.hpp  params.hpp  prime_field.hpp  primes.hpp  types.hpp
include/prime_field/: field_element.hpp  field_element.tpp  params.hpp  types.hpp
include/prime_field/detail/: helpers.hpp  params_helpers.hpp  random.hpp
include/prime_field/primes/: p128_0.hpp  p128_1.hpp  p192_0.hpp  p192_1.hpp  p256_0.hpp  p256_1.hpp  p512_0.hpp  p512_1.hpp  p64_0.hpp  p64_1.hpp
include/primes/: p128_0.hpp  p128_1.hpp  p192_0.hpp  p192_1.hpp  p256_0.hpp  p256_1.hpp  p512_0.hpp  p512_1.hpp  p64_0.hpp  p64_1.hpp
src/primes/: p128_0.cpp  p128_1.cpp  p192_0.cpp  p192_1.cpp  p256_0.cpp  p256_1.cpp  p512_0.cpp  p512_1.cpp  p64_0.cpp  p64_1.cpp
tests/: test_all_params.cpp  test_all_primes.cpp  test_params.cpp  tests.cpp
